<resources>
    <string name="app_name">Trabalho01.2-2018-1</string>
    <string name="fantasy_app_name">Calculadora de Salário</string>
    <string name="action_settings">Settings</string>
    <string name="label_cargo">Selecione o cargo</string>
    <string name="label_horas_extras">Nº hrs extras</string>
    <string name="label_n_faltas">Nº faltas</string>
    <string name="label_n_filhos">Nº filhos</string>

    <string name="label_text_gerente">Gerente</string>
    <string name="label_text_supervisor">Supervisor</string>
    <string name="label_text_servente">Servente</string>
    <string name="label_btn_calcular">CALCULAR</string>

    <string name="dial_title_err">Erro</string>
    <string name="dial_title_res">Resultado</string>

    <string name="dial_message_cargo_err">Você deve selecionar um cargo!</string>
    <string name="dial_message_empty_err">Preencha todos os campos de texto!</string>

</resources>
